@@ -48,3 +48,7 @@
 .connectionContainer .content .connectionItemWrapper {
     padding: 0px;
 }
+
+.overflowVisible {
+    overflow: visible;
+}
