@@ -1,9 +1,9 @@
-<table class="connectionContainer">
-    <tr>
+<table class="connectionContainer overflowVisible">
+    <tr class="overflowVisible">
         <td class="connectionLeftColumn">
             <table class="content"></table>
         </td>
-        <td class="connectionMiddleColumn">
+        <td class="connectionMiddleColumn overflowVisible">
             <canvas class="connections"></canvas>
         </td>
         <td class="connectionRightColumn">
